[package]
name = "rustydorf"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
[dependencies.windows]
version = "0.58.0"
features = [
     "Foundation_Collections",
     "Win32_Foundation",
     "Win32_System_Diagnostics_Debug",
     "Win32_System_Memory",
     "Win32_System_Threading",
     "Win32_Security",
     "Win32_System_Diagnostics_ToolHelp",
     "Win32_System_SystemServices",
     "Win32_System_SystemInformation"
]