[package]
name = "rustydorf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "handleapi", "minwindef", "tlhelp32", "errhandlingapi", "memoryapi"] }
