[package]
name = "rustydorf"
version = "0.1.0"
edition = "2021"

[dependencies]
codepage-437 = "0.1.0"
axum = { version = "0.7", features = ["macros"] }
colored = "3.0.0"
log = "0.4.25"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "handleapi", "minwindef", "tlhelp32", "errhandlingapi", "memoryapi"] }
pyo3 = "0.23.1"
